force-app/main/default/objects/Integration_Field_Rule__c/Integration_Field_Rule__c.object-meta.xml
<CustomObject>
    <description>Individual field mapping rule: maps an API JSON field to a Salesforce object field. Child of Integration_Source_Config__c. Supports required flag, default values, type conversion, and lookup resolution.</description>
    <label>Integration Field Rule</label>
    <nameField>
        <displayFormat>IFR-{00000}</displayFormat>
        <label>Rule Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Integration Field Rules</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>