force-app/main/default/objects/Integration_Field_Rule__c/fields/API_Field_Label__c.field-meta.xml
<CustomField>
    <fullName>API_Field_Label__c</fullName>
    <description>Human-readable label for the API field, shown in the mapping designer UI.</description>
    <label>API Field Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>