force-app/main/default/objects/Integration_Field_Rule__c/fields/API_Field_Name__c.field-meta.xml
<CustomField>
    <fullName>API_Field_Name__c</fullName>
    <description>The JSON key name from the incoming API payload (e.g., first_name, mobile, project_code).</description>
    <label>API Field Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>