force-app/main/default/objects/Integration_Field_Rule__c/fields/Default_Value__c.field-meta.xml
<CustomField>
    <fullName>Default_Value__c</fullName>
    <description>Default value to use when the API payload does not include this field or its value is blank.</description>
    <label>Default Value</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>