force-app/main/default/objects/Integration_Field_Rule__c/fields/Integration_Source_Config__c.field-meta.xml
<CustomField>
    <fullName>Integration_Source_Config__c</fullName>
    <description>Master-detail to the parent Integration Source Config.</description>
    <label>Integration Source Config</label>
    <referenceTo>Integration_Source_Config__c</referenceTo>
    <relationshipLabel>Field Rules</relationshipLabel>
    <relationshipName>Integration_Field_Rules</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>