force-app/main/default/objects/Integration_Field_Rule__c/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Whether this individual field rule is active. Inactive rules are skipped during mapping.</description>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>