force-app/main/default/objects/Integration_Field_Rule__c/fields/Is_Required__c.field-meta.xml
<CustomField>
    <fullName>Is_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether this API field is required. If true, the engine will reject payloads missing this field.</description>
    <label>Is Required</label>
    <type>Checkbox</type>
</CustomField>