force-app/main/default/objects/Integration_Field_Rule__c/fields/Is_Static__c.field-meta.xml
<CustomField>
    <fullName>Is_Static__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When true, this rule sets a fixed value (from Default_Value__c) directly on the Salesforce field without reading from the API payload. Used for system-set fields like Record_Source__c or Status__c.</description>
    <label>Is Static Value</label>
    <type>Checkbox</type>
</CustomField>