force-app/main/default/objects/Integration_Field_Rule__c/fields/SF_Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>SF_Field_API_Name__c</fullName>
    <description>The Salesforce field API name on the target object (e.g., First_Name__c, Primary_Mobile__c).</description>
    <label>SF Field API Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>