force-app/main/default/objects/Integration_Field_Rule__c/fields/Transform_Expression__c.field-meta.xml
<CustomField>
    <fullName>Transform_Expression__c</fullName>
    <description>Optional transformation expression applied to the value. Supported: UPPERCASE, LOWERCASE, TRIM, PREFIX:value, SUFFIX:value</description>
    <label>Transform Expression</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>